[gd_scene load_steps=2 format=3 uid="uid://dvpuph4fb5vxj"]

[ext_resource type="Script" path="res://Menus/Scripts/menu_join.gd" id="1_0ncdv"]

[node name="MenuJoin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ncdv")

[node name="Refresh" type="Button" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 49.0
offset_right = 979.0
offset_bottom = 82.0
text = "Refresh
"

[node name="LobbyContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 623.0
offset_top = 157.0
offset_right = 1111.0
offset_bottom = 611.0

[node name="Lobbies" type="VBoxContainer" parent="LobbyContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 30.0
offset_right = 184.0
offset_bottom = 61.0
text = "Back
"

[connection signal="pressed" from="Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
